// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Seconday Button renders 1`] = `
<SecondaryButtonContainer>
  Button
</SecondaryButtonContainer>
`;

exports[`Seconday Button renders with icon 1`] = `
<SecondaryButtonContainer>
  <SecondaryButtonIcon>
    <Memo([object Object])
      icon="plus"
      size={16}
    />
  </SecondaryButtonIcon>
  Button
</SecondaryButtonContainer>
`;
